yaml/mq-stateful-set.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  selfLink: /apis/apps/v1/namespaces/cp4i/statefulsets/simon1-ibm-mq
  resourceVersion: '50203605'
  name: simon1-ibm-mq
  uid: 5d901e5d-69f2-45ed-9f77-9781a46deab9
  creationTimestamp: '2021-06-11T00:15:43Z'
  generation: 1
  namespace: cp4i
  ownerReferences:
    - apiVersion: mq.ibm.com/v1beta1
      kind: QueueManager
      name: simon1
      uid: 570c2d00-623f-44a1-8414-ed9e854844be
      controller: true
      blockOwnerDeletion: true
  labels:
    app.kubernetes.io/component: integration
    app.kubernetes.io/instance: simon1
    app.kubernetes.io/managed-by: operator
    app.kubernetes.io/name: ibm-mq
    app.kubernetes.io/version: 9.2.2.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: integration
      app.kubernetes.io/instance: simon1
      app.kubernetes.io/managed-by: operator
      app.kubernetes.io/name: ibm-mq
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: integration
        app.kubernetes.io/instance: simon1
        app.kubernetes.io/managed-by: operator
        app.kubernetes.io/name: ibm-mq
        app.kubernetes.io/version: 9.2.2.0
      annotations:
        cloudpakId: c8b82d189e7545f0892db9ef2731b90d
        productVersion: 9.2.2.0
        productID: 208423bb063c43288328b1d788745b0c
        cloudpakName: IBM Cloud Pak for Integration
        cloudpakVersion: 2021.1.1-0
        productChargedContainers: qmgr
        productCloudpakRatio: '2:1'
        productName: IBM MQ Advanced
        productMetric: VIRTUAL_PROCESSOR_CORE
    spec:
      restartPolicy: Always
      serviceAccountName: simon1-ibm-mq
      schedulerName: default-scheduler
      affinity: {}
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: '1'
              memory: 1Gi
          readinessProbe:
            exec:
              command:
                - chkmqready
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 1
          terminationMessagePath: /run/termination-log
          name: qmgr
          livenessProbe:
            exec:
              command:
                - chkmqhealthy
            initialDelaySeconds: 90
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 1
          securityContext:
            capabilities:
              drop:
                - ALL
            privileged: false
            runAsNonRoot: true
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 1414
              protocol: TCP
            - containerPort: 9157
              protocol: TCP
            - containerPort: 9443
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: oidc-certificate
              mountPath: /etc/mqm/pki/trust/default
            - name: zen-ca-certificate
              mountPath: /etc/mqm/pki/trust/zenca
          terminationMessagePolicy: File
          image: >-
            cp.icr.io/cp/ibm-mqadvanced-server-integration@sha256:99c9bc6d3fb56a62b841ed51175fa2239d57124da7e84dca2c9a9472dcba0374
      serviceAccount: simon1-ibm-mq
      volumes:
        - name: oidc-certificate
          secret:
            secretName: ibmcloud-cluster-ca-cert
            items:
              - key: ca.crt
                path: OIDC_CERTIFICATE.crt
            defaultMode: 420
        - name: zen-ca-certificate
          secret:
            secretName: internal-nginx-svc-tls
            items:
              - key: tls.crt
                path: ZEN_CERTIFICATE.crt
            defaultMode: 420
      dnsPolicy: ClusterFirst
  serviceName: qm
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
status:
  observedGeneration: 1
  replicas: 1
  readyReplicas: 1
  currentReplicas: 1
  updatedReplicas: 1
  currentRevision: simon1-ibm-mq-7cb98b6f5f
  updateRevision: simon1-ibm-mq-7cb98b6f5f
  collisionCount: 0
