yaml/mq-route-qmgr.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  resourceVersion: '6637364'
  name: simon1-ibm-mq-qm
  uid: a6dab722-ff33-475c-8c95-662cb7ccfe23
  creationTimestamp: '2021-06-11T00:15:18Z'
  namespace: cp4i
  ownerReferences:
    - apiVersion: mq.ibm.com/v1beta1
      kind: QueueManager
      name: simon1
      uid: 570c2d00-623f-44a1-8414-ed9e854844be
      controller: true
      blockOwnerDeletion: true
  labels:
    app.kubernetes.io/component: integration
    app.kubernetes.io/instance: simon1
    app.kubernetes.io/managed-by: operator
    app.kubernetes.io/name: ibm-mq
    app.kubernetes.io/version: 9.2.2.0
spec:
  host: simon1-ibm-mq-qm-cp4i.apps.openshift.txmq.int
  to:
    kind: Service
    name: simon1-ibm-mq
    weight: 100
  port:
    targetPort: 1414
  tls:
    termination: passthrough
  wildcardPolicy: None
status:
  ingress:
    - host: simon1-ibm-mq-qm-cp4i.apps.openshift.txmq.int
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2021-06-11T00:15:18Z'
      wildcardPolicy: None
      routerCanonicalHostname: apps.openshift.txmq.int
